# ClothingServer

./: .gitignore  CMakeLists.txt  README.md
include/: ClothingItem.h  Database.h  Global.h  RequestHandler.h  Server.h
include/network/: HttpSession.h  NetworkManager.h
src/: ClothingItem.cpp  Database.cpp  RequestHandler.cpp  Server.cpp  main.cpp
src/network/: HttpSession.cpp  NetworkManager.cpp
tests/: test_database.cpp  test_network.cpp  test_requesthandler.cpp  test_server.cpp
